langtools/test/tools/javac/typeAnnotations/failures/common/newarray/DuplicateAnnotationValue.out
DuplicateAnnotationValue.java:10:51: compiler.err.duplicate.annotation.member.value: value, A
1 error
